--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "test": "node ace test",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:routes": "node test-routes.js",
+    "docs:generate": "node ace docs:generate",
+    "docs:serve": "node ace docs:serve"
   },
   "imports": {
     "#controllers/*": "./app/controllers/*.js",
@@ -59,10 +62,24 @@
     "@adonisjs/core": "^6.18.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.6.1",
+    "@adonisjs/mail": "^9.2.2",
+    "@adonisjs/route-model-binding": "2.0.0-0",
+    "@adonisjs/transmit": "^2.0.2",
+    "@rlanz/bull-queue": "^3.1.0",
     "@vinejs/vine": "^3.0.1",
+    "adonis-autoswagger": "^3.73.0",
+    "adonisjs-scheduler": "^2.4.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^7.3.1",
+    "helmet": "^8.0.0",
     "luxon": "^3.7.1",
+    "node-appwrite": "17.2.0",
     "pg": "^8.16.3",
-    "reflect-metadata": "^0.2.2"
+    "rate-limiter-flexible": "^5.0.0",
+    "reflect-metadata": "^0.2.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "hotHook": {
     "boundaries": [
