--- a/package.json
+++ b/package.json
@@ -36,32 +36,33 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
-    "@adonisjs/eslint-config": "^2.0.0",
-    "@adonisjs/prettier-config": "^1.4.4",
-    "@adonisjs/tsconfig": "^1.4.0",
+    "@adonisjs/eslint-config": "^2.1.0",
+    "@adonisjs/prettier-config": "^1.4.5",
+    "@adonisjs/tsconfig": "^1.4.1",
     "@eslint/js": "^9.32.0",
     "@japa/api-client": "^3.1.0",
-    "@japa/assert": "^4.0.1",
+    "@japa/assert": "^4.1.1",
     "@japa/plugin-adonisjs": "^4.0.0",
-    "@japa/runner": "^4.2.0",
+    "@japa/runner": "^4.3.0",
     "@swc/core": "1.11.24",
     "@types/luxon": "^3.7.1",
-    "@types/node": "^22.15.18",
-    "eslint": "^9.26.0",
+    "@types/node": "^22.17.0",
+    "adonis-sail": "^1.0.0",
+    "eslint": "^9.32.0",
     "globals": "^16.3.0",
     "hot-hook": "^0.4.0",
     "jiti": "^2.5.1",
-    "pino-pretty": "^13.0.0",
-    "prettier": "^3.5.3",
-    "ts-node-maintained": "^10.9.5",
-    "typescript": "~5.8",
+    "pino-pretty": "^13.1.1",
+    "prettier": "^3.6.2",
+    "ts-node-maintained": "^10.9.6",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.38.0"
   },
   "dependencies": {
-    "@adonisjs/auth": "^9.4.0",
-    "@adonisjs/core": "^6.18.0",
+    "@adonisjs/auth": "^9.4.2",
+    "@adonisjs/core": "^6.19.0",
     "@adonisjs/cors": "^2.2.1",
-    "@adonisjs/lucid": "^21.6.1",
+    "@adonisjs/lucid": "^20.6.0",
     "@adonisjs/mail": "^9.2.2",
     "@adonisjs/route-model-binding": "2.0.0-0",
     "@adonisjs/transmit": "^2.0.2",
@@ -69,17 +70,18 @@
     "@vinejs/vine": "^3.0.1",
     "adonis-autoswagger": "^3.73.0",
     "adonisjs-scheduler": "^2.4.0",
-    "compression": "^1.7.4",
+    "adonisjs-websocket": "^0.2.3",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "express-rate-limit": "^7.3.1",
-    "helmet": "^8.0.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^8.1.0",
     "luxon": "^3.7.1",
     "node-appwrite": "17.2.0",
     "pg": "^8.16.3",
-    "rate-limiter-flexible": "^5.0.0",
+    "rate-limiter-flexible": "^5.0.5",
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.1"
   },
   "hotHook": {
     "boundaries": [
